...
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6Mr-cc-gmO" userLabel="End Marker">
                                <rect key="frame" x="309" y="40" width="6" height="587"/>
                                <accessibility key="accessibilityConfiguration" identifier="endMarker"/>
                            </view>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hrj-qG-B2M" userLabel="Start Marker">
                                <rect key="frame" x="60" y="40" width="6" height="587"/>
                                <accessibility key="accessibilityConfiguration" identifier="startMarker"/>
                            </view>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Qlf-kb-ke1" userLabel="Middle Marker">
                                <rect key="frame" x="184.5" y="24.5" width="6" height="618"/>
                                <accessibility key="accessibilityConfiguration" identifier="middleMarker"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="6" id="JuD-Jk-Wra"/>
...
                                <rect key="frame" x="20" y="142" width="335" height="50"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <accessibility key="accessibilityConfiguration" identifier="RangeUISliderCustomScale"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="ReD-5b-aP8"/>
...
                                <rect key="frame" x="20" y="308.5" width="335" height="50"/>
                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <accessibility key="accessibilityConfiguration" identifier="RangeUISliderStepIncrement"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="NpT-2b-hwo"/>
...
                                <rect key="frame" x="127" y="53" width="95" height="21"/>
                                <color key="backgroundColor" red="0.91779082700000003" green="1" blue="0.90423119389999995" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                <accessibility key="accessibilityConfiguration" identifier="minValueSelectedLabel"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="95" id="NIZ-PK-JVz"/>
...
                                <rect key="frame" x="127" y="82" width="95" height="21"/>
                                <color key="backgroundColor" red="0.91779082700000003" green="1" blue="0.90423119389999995" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                <accessibility key="accessibilityConfiguration" identifier="maxValueSelectedLabel"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="95" id="0mR-mr-8ik"/>
...
                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                        <userDefinedRuntimeAttributes>
                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="TabBar"/>
                        </userDefinedRuntimeAttributes>
                    </tabBar>
...
                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0.0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rYs-aK-7r9">
                                            <rect key="frame" x="341" y="11" width="24" height="77.5"/>
                                            <accessibility key="accessibilityConfiguration" identifier="minValueSelected"/>
                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                            <nil key="textColor"/>
...
                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0.0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4Zf-Vh-GOf">
                                            <rect key="frame" x="16" y="11" width="42" height="77"/>
                                            <accessibility key="accessibilityConfiguration" identifier="maxValueSelected"/>
                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                            <nil key="textColor"/>
...
                    <tabBarItem key="tabBarItem" title="Grouped features" image="tabbarIcon" selectedImage="tabbarIcon" id="NRU-vO-tMe">
                        <userDefinedRuntimeAttributes>
                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="GroupedFeatures"/>
                        </userDefinedRuntimeAttributes>
                    </tabBarItem>
...
