...
            segueIdentifier: "showChangeScaleProgrammaticSegue"
        ),
        GroupedFeaturesViewControllerData(
            description: "Programmatic default knob value change",
            segueIdentifier: "showChangeDefaultKnobValueProgrammaticSegue"
        ),
        GroupedFeaturesViewControllerData(description: "SwiftUI", segueIdentifier: "swiftUISegue")
    ]

    override func numberOfSections(in tableView: UITableView) -> Int {
        return 1
    }

...
